design related error fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fruit Brust</title>
-  <link rel="shortcut " href="./images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
   <!-- Tailwind and Daisy UI -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -52,7 +52,7 @@
         </div>
         <div class="">
           <div class="dropdown ">
-            <label tabindex="0" class="btn btn-ghost btn-circle transition">
+            <label tabindex="0" class="btn btn-ghost btn-circle">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" /></svg>
             </label>
             <ul tabindex="0" class="menu menu-sm right-0 dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 flex-col font-medium gap-3">
@@ -104,14 +104,14 @@
             </div>
             <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
               <h3 class="lg:text-7xl mx-auto text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
+              <p class="lg:text-xl text-sm lg:text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
           <div
-            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2 ">
+            class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 lg:left-5 lg:right-5 top-[55%] ">
             <a href="#slide4" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide2" class="btn btn-circle  bg-black text-white hover:text-black border-0">❯</a>
           </div>
@@ -127,7 +127,7 @@
             </div>
             <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
               <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
+              <p class="lg:text-xl text-sm lg:text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color border-0">Shop Now</button>
               </div>
@@ -135,7 +135,7 @@
           </div>
 
           <div
-            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
+            class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 lg:left-5 lg:right-5 top-[55%]">
             <a href="#slide1" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide3" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
@@ -149,14 +149,14 @@
             </div>
             <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
               <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
+              <p class="lg:text-xl text-sm lg:text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
           <div
-            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
+            class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 lg:left-5 lg:right-5 top-[55%]">
             <a href="#slide2" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide4" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
@@ -170,14 +170,14 @@
             </div>
             <div class="grid grid-cols-1 lg:w-3/5 text-center lg:gap-7 gap-4 mx-auto lg:pt-20  pt-10 relative">
               <h3 class="lg:text-7xl text-4xl font-extrabold text-white">Exotic tastes at your doorstep</h3>
-              <p class="lg:text-xl text-base font-medium text-white">We supply highly quality organic products</p>
+              <p class="lg:text-xl text-sm lg:text-base font-medium text-white">We supply highly quality organic products</p>
               <div>
                 <button class="btn bg-primary-color text-white hover:bg-primary-color border-0">Shop Now</button>
               </div>
             </div>
           </div>
           <div
-            class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 lg:left-5 lg:right-5 top-1/2">
+            class="absolute flex justify-between transform -translate-y-1/2 left-1 right-1 lg:left-5 lg:right-5 top-[55%]">
             <a href="#slide3" class="btn btn-circle bg-black text-white hover:text-black border-0">❮</a>
             <a href="#slide1" class="btn btn-circle bg-black text-white hover:text-black border-0">❯</a>
           </div>
