--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <section class="max-w-7xl mx-auto my-8 lg:my-36">
       <!-- Deal Content -->
       <div class="flex flex-col lg:flex-row justify-between">
-        <div class="lg:w-1/2 mb-12">
+        <div class="lg:w-1/2 mb-12 mx-5">
           <h3 class=" text-center lg:text-left text-5xl font-extrabold text-[#121212] mb-6">Deal of the day</h3>
           <p class="text-center lg:text-left font-medium text-[#0C0C0C99]">Contrary to popular belief, is not simply
             random text. It has roots in
