--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
   </script>
   <!-- CSS  -->
   <style>
+    *{
+      margin: 0;
+      padding: 0;
+    }
     .font-lato {
       font-family: 'Lato', sans-serif;
     }
@@ -298,7 +302,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-14 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
@@ -353,7 +357,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-14 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
@@ -408,7 +412,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" checked/>
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-14 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
@@ -463,7 +467,7 @@
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-1" />
                 <input type="radio" name="rating-10" class="bg-primary-color mask mask-star-2 mask-half-2" />
               </div>
-              <div class="mt-7 lg:mb-16 flex justify-center gap-5">
+              <div class="mt-7 lg:mb-14 flex justify-center gap-5">
                 <form method="dialog" class=" modal-backdrop">
                   <button
                     class="btn bg-white border-primary-color text-primary-color hover:bg-primary-color hover:text-white">close</button>
